# omni-core

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .replit  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  replit.nix
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: backend.yml  docker.yml  frontend.yml  release.yml
backend/: Cargo.toml  Dockerfile
backend/data/: client_config.yaml  server_keys.yaml
backend/src/: config.rs  main.rs
backend/src/api/: admin.rs  auth.rs  health.rs  keys.rs  metrics.rs  mod.rs  register.rs  servers.rs  settings.rs
backend/src/services/: admin.rs  client_store.rs  crypto.rs  crypto_test.rs  keystore.rs  keystore_test.rs  metrics.rs  mod.rs  server_config.rs  server_registry.rs  session.rs  session_test.rs  sync.rs
data/config.d/: server-config.yaml
docs/: API-Reference.md  Architecture.md  Backend-Guide.md  Deployment.md  Frontend-Guide.md  Home.md  Integration-Guide.md  Key-Exchange-Flow.md  Project-Review.md  Quick-Start.md  RELEASE_SCHEDULE.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/common/: ErrorBoundary.tsx  TabButton.tsx
frontend/src/components/tabs/: HomeTab.tsx  KeysTab.tsx  RegisterTab.tsx  ServerTab.tsx  SettingsTab.tsx  index.ts
frontend/src/hooks/: index.ts  useAuth.test.ts  useAuth.ts  useClientKeys.ts  useKnownServers.ts  useServerInfo.test.ts  useServerInfo.ts  useSettings.test.ts  useSettings.ts
frontend/src/lib/: api.test.ts  api.ts
frontend/src/test/: setup.ts
frontend/src/types/: index.ts
omni-core-lib/: Cargo.toml
omni-core-lib/src/: crypto.rs  keystore.rs  lib.rs  registry.rs  session.rs  sync.rs
scripts/: create-github-issues.js  docker-test.sh  lint.sh  setup-hooks.sh  test.sh
tests/integration/: run-tests.sh
