[package]
name = "omni-backend"
description = "Omni Core authentication and session backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "omni-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# UUID
uuid = { workspace = true }

# Time
chrono = { workspace = true }

# Crypto
argon2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }

# Config
dotenvy = { workspace = true }
